force-app/main/default/objects/Data_Set__c/fields/Frequency__c.field-meta.xml
<CustomField>
    <fullName>Frequency__c</fullName>
    <label>Frequency</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Hourly</fullName>
            </value>
            <value>
                <fullName>Daily</fullName>
            </value>
            <value>
                <fullName>Weekly</fullName>
            </value>
            <value>
                <fullName>Monthly</fullName>
            </value>
            <value>
                <fullName>Quarterly</fullName>
            </value>
            <value>
                <fullName>Yearly</fullName>
            </value>
            <value>
                <fullName>Not Applicable</fullName>
            </value>
            <value>
                <fullName>Real-time</fullName>
            </value>
            <value>
                <fullName>Event Driven</fullName>
            </value>
            <value>
                <fullName>Annually</fullName>
                <isActive>false</isActive>
                <label>Annually</label>
            </value>
            <value>
                <fullName>On Demand</fullName>
                <isActive>false</isActive>
                <label>On Demand</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>