force-app/main/default/objects/Data_Set__c/listViews/DataSetList.listView-meta.xml
<ListView>
    <fullName>DataSetList</fullName>
    <columns>OBJECT_ID</columns>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <label>DataSetList</label>
</ListView>